--- a/index.html
+++ b/index.html
@@ -1047,12 +1047,7 @@
                     color: var(--primary-color);
                 }
 
-                .admin-access {
-                    position: fixed;
-                    bottom: 20px;
-                    left: 20px;
-                    z-index: 98;
-                }
+            
         }
     </style>
 </head>
@@ -1488,7 +1483,7 @@ const firebaseConfig = {
   projectId: "hellen-moda-fitnes",
   storageBucket: "hellen-moda-fitnes.firebasestorage.app",
   messagingSenderId: "998940228851",
-  appId: "1:998940228851:web:d4e8d3ac366c26fe9e4b86"
+  appId: "1:998940228851:web:d4e8d3ac366c26fe9e4b86",
 };
 // Inicializar Firebase
 firebase.initializeApp(firebaseConfig);
